<?xml version="1.0" encoding="utf-8"?>
<!--
	notify-smtp-android - Android Notify to SMTP Service
	
	Copyright 2015  Simon Arlott
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference 
		android:key="enabled"
		android:summaryOn="@string/pref_enabled_summary_on"
		android:summaryOff="@string/pref_enabled_summary_off"
		android:title="@string/pref_enabled_title"/>
	
	<MultiSelectListPreference
		android:key="days"
		android:entries="@array/pref_days_entries"
		android:entryValues="@array/pref_days_entry_values"
		android:summary="@string/pref_days_summary"
		android:title="@string/pref_days_title" />
	
	<EditTextPreference
		android:key="startTime"
		android:summary="@string/pref_start_time_summary"
		android:title="@string/pref_start_time_title"/>
	
	<EditTextPreference
		android:key="stopTime"
		android:summary="@string/pref_stop_time_summary"
		android:title="@string/pref_stop_time_title"/>
	
	<EditTextPreference
		android:key="node"
		android:summary="@string/pref_node_summary"
		android:title="@string/pref_node_title"/>
	
	<EditTextPreference
		android:key="service"
		android:summary="@string/pref_service_summary"
		android:title="@string/pref_service_title"/>
	
	<EditTextPreference
		android:key="username"
		android:summary="@string/pref_username_summary"
		android:title="@string/pref_username_title"/>
	
	<EditTextPreference
		android:inputType="textPassword"
		android:key="password"
		android:summary="@string/pref_password_summary"
		android:title="@string/pref_password_title"/>
	
	<EditTextPreference
		android:key="sender"
		android:summary="@string/pref_sender_summary"
		android:title="@string/pref_sender_title"/>
	
	<EditTextPreference
		android:key="recipients"
		android:summary="@string/pref_recipients_summary"
		android:title="@string/pref_recipients_title"/>
</PreferenceScreen>